Fixed Sidebar not showing in full on landscape mobile by adjusting size of li elements

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ header .logo {
 }
 nav{
     height: calc(100% + 10px);
+    
 }
 nav ul{
     width: 100%;
@@ -81,7 +82,6 @@ nav .menuButton img{
     height: auto;
     width: auto;
 }
-
 .sidebar{
     position: fixed;
     top: 0px;
@@ -132,8 +132,14 @@ footer #eds{
         display: none;
     }
 }
-@media(max-width: 400px){
-    .sidebar{
-        width: 100vw;
+@media(max-width: 800px){
+    .topbar{
+        display: none;
+    }
+}
+@media(max-height: 600px){
+    .sidebar li{
+        height: 9vh;
+        min-height: 30px;
     }
 }
